<resources>

    <string name="app_headline">Pimp your SGF</string>

    <string name="sgf_to_png">SGF file to PNG</string>
    <string name="wallpaper">Live wallpaper</string>
    <string name="edit_themes">Edit themes</string>
    <string name="about_version">Version %s</string>
    <string name="about_author">Made with love by Jules Tréhorel\nKGS: Judas\nOGS: _Judas_</string>
    <string name="about_licenses">This app uses 3rd party libraries:\n- SGF4J\n- BubbleSeekBar\n- GSON\n- Retrofit\n- OkHttp3\n- RxAndroid / RxJava</string>
    <string name="about_content">Josekis are from Kogo\'s Joseki Dictionary https://waterfire.us/joseki.htm.\n\nPro games are available thanks to the courtesy of Go4Go https://www.go4go.net/go/ .\n\nCode is available on Github https://github.com/Judas/Katachi.</string>

    <string name="menu_themes">Themes</string>
    <string name="menu_save">Save theme</string>
    <string name="menu_export">Export</string>

    <string name="sgf_selection_failure">Error while fetching SGF file</string>
    <string name="sgf_loading_failure">Error while loading SGF file</string>
    <string name="current_move">Move</string>
    <string name="export_failure">Error while exporting file</string>
    <string name="export_success">File saved in Downloads folder</string>

    <string name="config_board">Board</string>
    <string name="config_board_color">Color</string>
    <string name="config_board_padding">Extra padding</string>
    <string name="config_line">Lines</string>
    <string name="config_line_color">Color</string>
    <string name="config_line_width">Width</string>
    <string name="config_line_overflow">Overflow</string>
    <string name="config_white_stones">White stones</string>
    <string name="config_white_stone_color">Fill color</string>
    <string name="config_white_stone_stroke_color">Stroke color</string>
    <string name="config_white_stone_stroke_width">Stroke width</string>
    <string name="config_current_white_stone_color">Highlighted fill color</string>
    <string name="config_current_white_stone_stroke_color">Highlighted stroke color</string>
    <string name="config_current_white_stone_stroke_width">Highlighted stroke width</string>
    <string name="config_black_stones">Black stones</string>
    <string name="config_black_stone_color">Fill color</string>
    <string name="config_black_stone_stroke_color">Stroke color</string>
    <string name="config_black_stone_stroke_width">Stroke width</string>
    <string name="config_current_black_stone_color">Highlighted fill color</string>
    <string name="config_current_black_stone_stroke_color">Highlighted stroke color</string>
    <string name="config_current_black_stone_stroke_width">Highlighted stroke width</string>
    <string name="theme_title">Title</string>
    <string name="theme_title_required">Please enter the theme title</string>

    <string name="wallpaper_failure">Error while drawing wallpaper</string>
    <string name="wallpaper_submit">Set as wallpaper</string>
    <string name="move_speed">Move speed (sec)</string>
    <string name="end_delay">End delay (sec)</string>
    <string name="theme">Theme</string>
    <string name="wallpaper_content">Content</string>
    <string name="wallpaper_content_joseki">Joseki</string>
    <string name="wallpaper_content_pro_games">Pro games</string>

</resources>
