<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/big_stone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/big_stone"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/textPrimaryInverse"
            android:textSize="44sp" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/app_headline"
            android:textColor="@color/textSecondaryInverse"
            android:textSize="20sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sgf_to_png"
            style="@style/DefaultButton"
            android:text="@string/sgf_to_png" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wallpaper"
            style="@style/DefaultButton"
            android:text="@string/wallpaper" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_themes"
            style="@style/DefaultButton"
            android:text="@string/edit_themes" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_marginTop="50dp"
            android:indeterminateTint="@color/sun" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:src="@drawable/ic_about" />

</RelativeLayout>
