<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/big_stone"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="@dimen/status_bar_offset"
        app:navigationIconColor="@color/sun" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_launcher_fg" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextBold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:text="@string/app_name"
            android:textColor="@color/textPrimaryInverse"
            android:textSize="44sp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/about_version"
        style="@style/TextMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@color/textSecondaryInverse"
        android:textSize="22sp"
        tools:text="v 1.0" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/about_author"
                android:textColor="@color/textPrimaryInverse"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/about_licenses"
                android:textColor="@color/textPrimaryInverse"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autoLink="all"
                android:text="@string/about_content"
                android:textColor="@color/textPrimaryInverse"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
